# causal-micro-narratives

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: NOW_article_counts.csv  NOW_for_labelstudio_v1.tsv  NOW_sentence_counts.csv  cause_fraction_monthly.csv  effect_fraction_monthly.csv  sources.csv  test_cause.tsv  test_cause_and_locations.tsv  test_effect.tsv  test_effect_and_locations.tsv  train_cause.tsv  train_cause_and_locations.tsv  train_effect.tsv  train_effect_and_locations.tsv
data/claude-project-predictions/: predictions.txt
data/data_for_regression/: proquest_92pct.csv  proquest_now_all.csv
data/economic-indicators/: expectations_2012-2023.csv  michigan-survey-region-map.csv  table31_monthly_2012.csv  table31_quarterly_2012.csv  table32_monthly_2012.csv  table32_quarterly_2012.csv  table34_monthly_2012.csv  table34_quarterly_2012.csv
data/error-analysis/: NOW_llama31_ft_test_600s-majority-now_and_proquest.tsv  PROQUEST_llama31_ft_test_600s-majority-now_and_proquest.tsv  claude_project-majority-proquest.tsv  gpt4o-majority-now.tsv  gpt4o-majority-proquest.tsv  gpt4o-majority-train_now-test_None.tsv  gpt4o-majority-train_now-test_proquest.tsv  gpt4o-majority-train_now_and_proquest-test_now.tsv  gpt4o-majority-train_now_and_proquest-test_proquest.tsv  gpt4o-majority-train_proquest-test_None.tsv  llama31_ft_test_300s-majority-now.tsv  (+22 more)
scripts/: extract_now.sh  extract_now_alt.sh  interactive_run.sh  run_batched_predict.sh  run_classify.sh  run_llama3_sft.sh  run_phi2_sft.sh  run_phi3_sft.sh  run_predict.sh  unzip_now.sh
src/: .env.example
(+207 files in other folders)
