[tool.poetry]
name = "src"
version = "0.1.0"
description = "Econ narrative utilities"
authors = ["Mourad Heddaya <mourad@uchicago.edu>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core data processing
pandas = "^2.0.0"
numpy = "^1.24.0"
swifter = "^1.3.0"

# Machine Learning & NLP
scikit-learn = "^1.3.0"
spacy = "^3.7.0"
nltk = "^3.8.0"

# Deep Learning & LLM
torch = "^2.0.0"
transformers = "^4.35.0"
datasets = "^2.14.0"
anthropic = "^0.3.0"
openai = "^1.0.0"
dspy = "^2.0.0"

# Data formats & I/O
json5 = "^0.9.0"
pyarrow = "^14.0.1"  # For parquet support
fsspec = "~2023.6.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

# Utilities
tqdm = "^4.65.0"
wandb = "^0.15.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

# Code quality
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=src"
